# oemof-eesyplan

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: github-actions.yml
docs/: conf.py  installation.rst  requirements.txt  usage.rst
docs/reference/: eesyplan.rst  index.rst
examples/: f_heat_import.py
examples/simple_datapackage/: simple_datapackage.py
examples/simple_datapackage/openPlan_package/data/: project.csv
examples/simple_datapackage/openPlan_package/data/elements/: bess.csv
examples/simple_dispatch/: simple_dispatch.py  simple_dispatch_dp.py  simple_dispatch_scripted.py
examples/simple_dispatch/openPlan_package/data/elements/: bess.csv
examples/simple_dispatch/openPlan_results/: datapackage.json
examples/simple_dispatch/openPlan_results/results/elements/: objective.csv
examples/simple_dispatch/openPlan_results/results/sequences/: flow.csv  storage_content.csv  storage_losses.csv  variable_costs.csv
examples/simple_script/: simple_dispatch_scripted.py
examples/solve_any_datapackage/: solve_dp.py
src/oemof/eesyplan/: __init__.py  investment.py  io.py  model.py  project.py  type_checks.py  typemap.py
src/oemof/eesyplan/datapackage/: create_energy_system.py  energy_system.py  results.py
src/oemof/eesyplan/facades/: komponenten.py
src/oemof/eesyplan/facades/buses/: carrier.py
src/oemof/eesyplan/facades/compansation/: excess.py  shortage.py
src/oemof/eesyplan/facades/converters/: Boiler.py  ChpFixedRatio.py  ChpVariableRatio.py  DieselGenerator.py  ElectricalTransformator.py  Electrolyzer.py  FuelCell.py  HeatPump.py
src/oemof/eesyplan/facades/demand/: electricity_demand.py  fuel_demand.py  heat_demand.py  hydrogen_demand.py
src/oemof/eesyplan/facades/production/: BiogasPlant.py  GeothermalPlant.py  PvPlant.py  SolarThermalPlant.py  WindTurbine.py
src/oemof/eesyplan/facades/providers/: DSO_electricity.py  DSO_fuel.py  DSO_heat.py  DSO_hydrogen.py
src/oemof/eesyplan/facades/storages/: ElectricalStorage.py  FuelStorage.py  HydrogenStorage.py  ThermalStorage.py
src/oemof/eesyplan/importer/: create_timeseries.py  heat_demand.py  weather_data.py
tests/: test_basic.py  test_converters.py  test_datapackage.py  test_heat_demand.py  test_io.py  test_weather.py
tests/test_data/openPlan_package/data/elements/: pv_plant.csv  wind_plant.csv
tests/test_data/openPlan_package/data/sequences/: profiles.csv
