[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
  ".coveragerc",
  ".editorconfig",
  ".readthedocs.yml",
  ".pre-commit-config.yaml",
  "tox.ini",
  "AUTHORS.rst",
  "CHANGELOG.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "README.rst",
  "examples/",
  "docs/",
  "src/",
  "tests/",
]
exclude = ["docs/_build", "**/*.egg-info"]

[project]
name = "oemof.eesyplan"
dynamic = ["readme","version"]
description = "SHORT DESCRIPTION"
readme = "README.rst"
authors = [
    { name = "Open Plan Community and oemof developer group", email = "CONTACT EMAIL" },
version = "0.0.1"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    # complete classifier list:
    # http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
]
keywords = [
    # eg: "keyword1", "keyword2", "keyword3",
]
requires-python = ">=3.10"
dependencies = [
    "oemof-network",
    "oemof-solph",
    "oemof-datapackage",
]

[project.optional-dependencies]
test = ["pytest", "coverage", "pvlib", "demandlib", "tox"]
dummy = ["oemof"]
docs = ["sphinx", "sphinx_rtd_theme"]
examples = []

[project.urls]
Homepage = "https://github.com/oemof/oemof-eesyplan"
Documentation = "https://oemof-eesyplan.readthedocs.io/"
Changelog = "https://oemof-eesyplan.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/oemof/oemof-eesyplan/issues/"

[tool.ruff]
extend-exclude = ["static", "ci/templates"]
line-length = 79
src = ["src", "tests", "examples"]
target-version = "py313"

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | ci
)/
'''

[tool.ruff.lint.per-file-ignores]
"ci/*" = ["S"]

[tool.ruff.lint]
ignore = [
    "RUF001", # ruff-specific rules ambiguous-unicode-character-string
    "S101",   # flake8-bandit assert
    "S308",   # flake8-bandit suspicious-mark-safe-usage
    "S603",   # flake8-bandit subprocess-without-shell-equals-true
    "S607",   # flake8-bandit start-process-with-partial-path
    "E501",   # pycodestyle line-too-long
]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle errors
    "EXE", # flake8-executable
    "F",   # pyflakes
    "I",   # isort
    "INT", # flake8-gettext
    "PIE", # flake8-pie
    "PLC", # pylint convention
    "PLE", # pylint errors
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RSE", # flake8-raise
    "RUF", # ruff-specific rules
    "S",   # flake8-bandit
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
forced-separate = ["conftest"]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
