[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    ".coveragerc",
    ".editorconfig",
    ".readthedocs.yml",
    ".pre-commit-config.yaml",
    "tox.ini",
    "AUTHORS.rst",
    "CHANGELOG.rst",
    "CONTRIBUTING.rst",
    "LICENSE",
    "README.rst",
    "examples/",
    "docs/",
    "src/",
    "tests/",
    ".bumpversion.cfg",
    ".cookiecutterrc",
    ".taplo.toml",
    "MANIFEST.in",
    "ci/bootstrap.py",
    "ci/requirements.txt",
    "ci/templates/.github/workflows/github-actions.yml",
    "pytest.ini",
]
exclude = ["docs/_build", "**/*.egg-info"]

[tool.flit.module]
name = "oemof.eesyplan"

[project]
name = "oemof.eesyplan"
dynamic = ["version"]
description = "SHORT DESCRIPTION"
readme = "README.rst"
authors = [
    { name = "Open Plan Community and oemof developer group", email = "contact@oemof.org" },
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
]
keywords = []
requires-python = ">=3.10"
dependencies = [
    "oemof-network",
    "oemof-solph",
    "oemof-datapackage",
]

[project.optional-dependencies]
test = ["pytest", "coverage", "pvlib", "demandlib", "tox"]
dummy = ["oemof"]
docs = ["sphinx", "sphinx_rtd_theme"]
examples = []

[project.urls]
Homepage = "https://github.com/oemof/oemof-eesyplan"
Documentation = "https://oemof-eesyplan.readthedocs.io/"
Changelog = "https://oemof-eesyplan.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/oemof/oemof-eesyplan/issues/"

[tool.ruff]
extend-exclude = ["static", "ci/templates"]
line-length = 79
src = ["src", "tests", "examples"]
target-version = "py313"

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | ci
)/
'''

[tool.ruff.lint.per-file-ignores]
"ci/*" = ["S"]

[tool.ruff.lint]
ignore = [
    "RUF001",
    "S101",
    "S308",
    "S603",
    "S607",
    "E501",
]
select = [
    "B",
    "C4",
    "DTZ",
    "E",
    "EXE",
    "F",
    "I",
    "INT",
    "PIE",
    "PLC",
    "PLE",
    "PT",
    "PTH",
    "RSE",
    "RUF",
    "S",
    "UP",
    "W",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
forced-separate = ["conftest"]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
